<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.mad.pogoenhancer.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >

        <argument
            android:name="lat"
            android:defaultValue="0.0"
            app:argType="float" />
        <argument
            android:name="lon"
            android:defaultValue="0.0"
            app:argType="float" />
    </fragment>

    <fragment
        android:id="@+id/nav_gpx"
        android:name="com.mad.pogoenhancer.ui.favouritePlaces.FavouritePlacesFragment"
        android:label="@string/menu_gpx"
        tools:layout="@layout/fragment_favourite_places_main" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.mad.pogoenhancer.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="com.mad.pogoenhancer.ui.tools.ToolsFragment"
        android:label="@string/menu_tools"
        tools:layout="@layout/fragment_tools" />
</navigation>